# aurex

./: .dev.vars.example  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  wrangler.toml
cloudflare-worker/: wrangler.toml
cloudflare-worker/src/: index.js
cloudflare-worker/test/: strategy.test.js
src/: candles.js  constants.js  entry.py  format.js  http.js  index.js  indicators.js  market-data.js  market-structure.js  settings.js  signals.js  strategy.js  telegram.js
src/aurex/: __init__.py  candles.py  config.py  constants.py  data_provider.py  formatting.py  indicators.py  main.py  market.py  market_data.py  market_structure.py  models.py  service.py  settings.py  signals.py  storage.py  strategy.py  telegram.py  telegram_bot.py
src/lumiere/: config.py  data_provider.py  main.py  market.py  models.py  service.py  storage.py  strategy.py  telegram_bot.py
src/xauusd_signal_bot/: config.py  data_provider.py  main.py  service.py  storage.py  strategy.py  telegram_bot.py
test/: strategy.test.js  test_aurex.py
tests/: test_market.py  test_strategy.py
