[project]
name = "aurex"
version = "0.1.0"
description = "Aurex Python Worker for XAUUSD Telegram signals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "workers-py",
    "workers-runtime-sdk",
]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
